--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,228 @@
-/**index.wxss**/
-.userinfo {
+.home_nav{
+  padding-top: 40rpx;
+  text-align: center;
+}
+.nav_dom{
+  font-size:32rpx;
+  font-family:PingFangSC-Medium,PingFang SC;
+  font-weight:500;
+  color:rgba(196,171,91,1);
+  line-height:48rpx;
+  display: inline-block;
+  margin-right: 120rpx;
+}
+.nav_dom:last-child{
+  margin-right: 0;
+}
+.nav_dom.active{
+  border-bottom: 4rpx solid #C4AB5B;
+}
+
+.area {
+top: -100vh;
+left: -100vw;
+height: 100vh;
+width: 200vw;
+/* background:#000; */
+background:rgba(0,0,0,0);
+}
+
+ .trm {
+  width: 670rpx;
+  height: 660rpx;
+  background-color: rgba(255, 255, 255, 1);
+  left:32rpx;
+  right: 0;
+  margin: 0 auto;
+  margin-top: 90rpx;
+  position: absolute;
+  z-index: 100;
+  overflow: hidden;
+} 
+.move_log {
+  width: 100%;
+  height:500rpx;
+  /* background-color: red; */
+  display: block;
+}
+
+.move_res {
+  background-color: rgba(194,167,83,1);
+  width: 100%;
+  height: 160rpx;
+  box-sizing: border-box;
+  padding: 10rpx 10rpx;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+}
+
+.move_title {
+  font-size: 28rpx;
+  color: rgba(255, 255, 255, 1);
+  display: flex;
+  align-items: center;
+  line-height: 40rpx;
+}
+.move_title .iconfont{
+  font-size: 30rpx;
+  margin-left: 10rpx;
+}
+
+.move_miniTitle {
+  font-size: 20rpx;
+  margin-left: auto;
+  position: relative;
+}
+.move_miniTitle::before{
+  content:'';
+  width:8rpx;
+  height:8rpx;
+  background:rgba(255,255,255,1);
+  position: absolute;
+  left: -20rpx;
+  top: 50%;
+  border-radius: 50%;
+  transform: translate(0,-50%);
+}
+
+.move_other {
+  font-size: 26rpx;
+  color: rgba(255, 255, 255, 1);
+  margin-top: 12rpx;
+}
+.move_other text{
+  margin-right: 10rpx;
+}
+.move_zw{
+  font-size: 0;
+  margin-top: 10rpx;
+}
+.move_zw .tag{
+  width:112rpx;
+  height:36rpx;
+  background:rgba(255,255,255,1);
+  display: inline-block;
+  font-size:20rpx;
+  font-family:PingFangSC-Regular,PingFang SC;
+  font-weight:400;
+  color:rgba(194,167,83,1);
+  line-height:36rpx;
+  text-align: center;
+  margin-right: 10rpx;
+}
+.typeGroup {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom:36rpx;
+}
+.typeGroup image{
+  width: 60rpx;
+  height: 60rpx;
+  margin-right: 80rpx;
+}
+.icon-quxiao {
+  font-size: 100rpx;
+  color: RGBA(212, 211, 206, 1);
+}
+
+.icon-cainixihuan {
+  margin-left: 60rpx;
+  font-size: 120rpx;
+  color: RGBA(212, 211, 206, 1);
+}
+.icon-kefu{
+  margin-left: 60rpx;
+  font-size: 100rpx;
+  color: RGBA(212, 211, 206, 1);
+  display: block;
+  /* height: 60rpx; */
+}
+
+.active {
+  color: RGBA(201, 140, 28, 1);
+}
+
+.mask{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.maskCode{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toast_center{
+  width: 600rpx;
+  /* height: 360rpx; */
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:18rpx;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+.toast_centerCode{
+  position: relative;
+  width: 686rpx;
+  height: 678rpx;
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:60rpx 40rpx 40rpx 40rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.toat_mainCode{
+    width: 100%;
+  height: 400rpx;
+  display: flex;
+  font-size:28rpx;
+  color: RGBA(153, 153, 153, 1);
+}
+.toat_main{
+  width: 100%;
+  height: 100rpx;
+  display: flex;
   align-items: center;
+  justify-content:center;
+  font-size:32rpx;
+  color: RGBA(0, 0, 0, 1);
+}
+.toat_yes{
+  width: 88%;
+  height:88rpx;
+  font-size: 32rpx;
+  color: RGBA(255, 255, 255, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 44rpx;
+  background-color: RGBA(174, 156, 128, 1);
+  margin: 0 auto;
+  margin-bottom: 50rpx;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.icon-quxiao1{
+  position: absolute;
+  top:27rpx;
+  right: 27rpx;
+  font-size: 28rpx;
+  color: RGBA(153, 153, 153, 1);
 }
