--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,45 +1,70 @@
 <view class="home_nav">
-  <view class="nav_dom active">邂逅</view>
-  <view class="nav_dom">匹配</view>
+  <view class="nav_dom {{!is_match?'active':''}}" bindtap="clickNav" data-type="encounters">邂逅</view>
+  <view class="nav_dom {{!is_match?'':'active'}}" bindtap="clickNav" data-type="match">匹配</view>
 </view>
 
 <view wx:if="{{delect_time==0}}">
   <view wx:if="{{wrapContent}}">
-    <view class="section">
-      <movable-area class="area">
-        <movable-view wx:for="{{content}}" wx:key="index" x="{{x}}" y="{{y}}" direction="all" bindchange="onChange" out-of-bounds="true" data-index="{{index}}" data-id='{{item.user_id}}' catch:touchend="tap">
-          <view class="trm {{index==myindex&&action=='left'?'cssActiveL':index==myindex&&action=='right'?'cssActiveR':''}}">
-            <image class='move_log' src="{{item.more!=null&&item.more!=undefind?item.more:'/images/home/logo.png'}}" catchtap='lookmore' data-id='{{item.user_id}}'></image>
-            <view class='move_res'>
-              <view class='move_title'>苏菀菁
-                <text class='iconfont icon-nv'></text>
-                <view class='move_miniTitle'>期待两年内结婚</view>
-              </view>
-              <view class='move_other'>
-                <text>24岁</text>
-                <text>|</text>
-                <text>173cm</text>
-                <text>|</text>
-                <text>4w-20w</text>
-              </view>
-              <view class='move_zw'>
-                <view class="tag">vip认证</view>
-                <view class="tag">身份认证</view>
-                <view class="tag">学历认证</view>
-              </view>
-            </view> 
-          </view>
-        </movable-view>
+    <view class="encounters" wx:if="{{!is_match}}">
+      <view class="section">
+        <movable-area class="area">
+          <movable-view wx:for="{{content}}" wx:key="index" x="{{x}}" y="{{y}}" direction="all" bindchange="onChange" out-of-bounds="true" data-index="{{index}}" data-id='{{item.user_id}}' catch:touchend="tap">
+            <view class="trm {{index==myindex&&action=='left'?'cssActiveL':index==myindex&&action=='right'?'cssActiveR':''}}">
+              <image class='move_log' src="{{item.more!=null&&item.more!=undefind?item.more:'/images/home/logo.png'}}" catchtap='lookmore' data-id='{{item.user_id}}'></image>
+              <view class='move_res'>
+                <view class='move_title'>苏菀菁
+                  <text class="lz-icon {{index == 0?'icon-certified':'icon-not-certified'}}"></text>
+                  <view class='move_miniTitle'>期待两年内结婚</view>
+                </view>
+                <view class='move_other'>
+                  <text>24岁</text>
+                  <text>|</text>
+                  <text>173cm</text>
+                  <text>|</text>
+                  <text>4w-20w</text>
+                </view>
+                <view class='move_zw'>
+                  <view class="tag">vip认证</view>
+                  <view class="tag">身份认证</view>
+                  <view class="tag">学历认证</view>
+                </view>
+              </view> 
+            </view>
+          </movable-view>
 
-      </movable-area>
+        </movable-area>
+      </view>
+      <view class='typeGroup'>
+        <image src='/images/match/x.png' bindtap='unlick'></image>
+        <image src='/images/match/heart.png' bindtap='lick'></image>
+      </view>
     </view>
-    <view class='typeGroup'>
-      <image src='/images/home/x.png' bindtap='unlick'></image>
-       <image src='/images/home/love.png' bindtap='lick'></image>
-        
-      <!-- <text class="iconfont  {{lick==false?'active':''}}" bindtap='unlick'></text>
-      <text class="iconfont icon-cainixihuan {{lick==true?'active':''}}" bindtap='lick'></text> -->
 
+    <view class="match" wx:else>
+      <view class="match-box">
+        <view class="match-header">
+          <view class="match_title">目前配对成功的已有<text>666000</text>对</view>
+          <view class="match_desc">个人信息越完善，认证越多，匹配越精准越快速</view>
+        </view>
+        <view class="match-step">
+          <view class="step">
+            <image></image>
+            <view class="step_desc">系统匹配</view>
+          </view>
+          <navigator url="/pages/index/couple_face/couple_face" class="step">
+            <image></image>
+            <view class="step_desc">夫妻脸匹配</view>
+          </navigator>
+          <navigator url="/pages/index/exact_match/exact_match" class="step">
+            <image></image>
+            <view class="step_desc">精准匹配</view>
+          </navigator>
+        </view>
+
+        <view class="contact">
+          <text>常见问题</text><text class="sunstring">|</text><text>联系客服</text>
+        </view>
+      </view>
     </view>
 
 
@@ -57,15 +82,3 @@
     <myToast noCode="{{noCode}}" step="{{step}}"></myToast>
   </view>
 </view>
-<!-- wx:if="{{noCode}}" -->
-<!-- <view class='maskCode' wx:if="{{noCode}}">
-  <view class='toast_centerCode'>
-    <text class='iconfont icon-quxiao1' bindtap='hideMask'></text>
-    <view class='toat_mainCode'>
-      {{otherdetail}}
-    </view>
-    <view class='toat_yes' bindtap='goloading'>
-      去登录
-    </view>
-  </view>
-</view> -->
