--- a/pages/login/index.wxml
+++ b/pages/login/index.wxml
@@ -1,15 +1,18 @@
 <!--pages/login/index.wxml-->
 
-<view class="logo-box">
-  <view class="english">MITU</view>
-  <view class="chinese">美途婚恋</view>
-</view>
-<view class="login-box">
-  <button class="phone-btn" size="default" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">手机号一键登录</button>
+<image class="page-bj" src="/images/login/bj.png"></image>
+<view class="page-view">
+  <view class="logo-box">
+    <view class="english">MITU</view>
+    <view class="chinese">美途婚恋</view>
+  </view>
+  <view class="login-box">
+    <button class="phone-btn" size="default" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">手机号一键登录</button>
 
-  <navigator url="/pages/login/login/login" class="go_login">其他方式登录/注册</navigator>
-  <view class="login_desc">点击一键登录/注册默认您已经同意</view>
-  <view class="login_link">《美途婚恋服务协议》</view>
+    <navigator url="/pages/login/login/login" class="go_login">其他方式登录/注册</navigator>
+    <view class="login_desc">点击一键登录/注册默认您已经同意</view>
+    <view class="login_link">《美途婚恋服务协议》</view>
 
+  </view>
 </view>
 
