--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -67,7 +67,7 @@
   <view class="recommend-list" wx:for="12" wx:key="unique">
     <navigator url="/pages/introduction/introduction">
       <view class="list-bj">
-        <image src="/images/home/banner_02.png"></image>
+        <!-- <image src="/images/home/banner_02.png"></image> -->
         <view class="certification_tag">
           <text class="icon_ver"></text>
           <text>已认证</text>
@@ -99,3 +99,5 @@
   </view>
 
 </view>
+
+<myToast noCode="{{noCode}}" step="{{step}}"></myToast>
