--- a/pages/introduction/introduction.wxml
+++ b/pages/introduction/introduction.wxml
@@ -2,11 +2,13 @@
 <view class="content-box">
   <view class="content-topic">
     <view class="header_bj">
-      <image src="/images/myself/banner.png" mode="aspectFill"></image>
+      <!-- <image src="/images/myself/banner.png" mode="aspectFill"></image> -->
     </view>
     <view class="header_mask">
       <view class="mask_list">
-        <image class="mask_icon" src="/images/introduction/love.png"></image>
+        <!-- <image class="mask_icon" src="/images/introduction/love.png"></image> -->
+        <image class="mask_icon" src="/images/introduction/love_active.png"></image>
+        
         <text>心动</text>
       </view>
       <view class="mask_list">
@@ -54,10 +56,10 @@
     </view>
     <view class="upload-box">
       <view class="upload-list upload-list-m-b" wx:for="{{upload_list}}" wx:key="{{index}}">
-        <image src="/images/introduction/photo.png"></image>
+        <!-- <image src="/images/introduction/photo.png"></image> -->
       </view>
       <view class="upload-list upload-list-m-b ">
-        <image src="/images/introduction/photo.png"></image>
+        <!-- <image src="/images/introduction/photo.png"></image> -->
         <view class="upload-list-more" bindtap="goMorePhoto">
           <view class="number">+3</view>
           <view class="more">查看更多></view>
@@ -71,7 +73,11 @@
     </view>
     <view class="list" bindtap="clickShow">
       <text class="fl">身份证认证</text>
-      <text class="fr">张**</text>
+      <view class="fr arrow-box">
+        <text>张**</text>
+        <text class="arrow_b {{ver_height == 0?'':'arrow_t'}}"></text>
+      </view>
+      
     </view>
     <view class="ver_show" style="height:{{ver_height}}rpx">
       <view>张**</view>
