--- a/pages/login/login/login.wxml
+++ b/pages/login/login/login.wxml
@@ -7,16 +7,16 @@
     <view class="chinese">美途婚恋</view>
   </view>
   <view class="login-box">
-    <form>
+    <form bindsubmit="formSubmit">
       <view class="input-cell">
-        <text class="input-icon icon-phone"></text>
-        <input placeholder="手机号"></input>
+        <text class="input-icon icon-phone" ></text>
+        <input placeholder="手机号" name="loginName"></input>
       </view>
       <view class="input-cell">
         <text class="input-icon icon-password"></text>
-        <input placeholder="密码"></input>
+        <input placeholder="密码" type="password" name="password"></input>
       </view>
-      <button class="phone-btn" size="default" >登录</button>
+      <button class="phone-btn" size="default" formType="submit">登录</button>
     </form>
     <view class="desc"><navigator class="go_register" url="/pages/login/register/register">立即注册</navigator>    |  <text class="go_forget">找回密码</text> </view>
 
