--- a/pages/myself/my_certification/education/education.wxss
+++ b/pages/myself/my_certification/education/education.wxss
@@ -50,6 +50,7 @@
   background:rgba(194,167,83,1);
   border-radius:16rpx;
   text-align: center;
+  padding: 0;
   font-size:32rpx;
   font-family:PingFangSC-Regular,PingFang SC;
   font-weight:400;
@@ -83,6 +84,14 @@
   height: 200rpx;
   background:rgba(255,255,255,1);
   border:2rpx solid rgba(219,219,219,1);
+  position: relative;
+}
+.upload-bj image{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 .add{
   width: 100%;
