--- a/pages/myself/my_certification/verified/verified.wxss
+++ b/pages/myself/my_certification/verified/verified.wxss
@@ -1,31 +1,34 @@
 
+
 .input-form{
-  padding:34rpx 0 40rpx;
-  background: #fff;
+ padding:34rpx 0 40rpx;
+ background: #fff;
 }
 .line{
-  width: 100%;
-  height: 20rpx;
-  background: #F7F7F7;
+ width: 100%;
+ height: 20rpx;
+ background: #F7F7F7;
 }
 .list-cell{
-  height: 100rpx;
-  line-height: 100rpx;
-  background: #fff;
-  border-bottom: 4rpx solid #F7F7F7;
-  padding:0 40rpx;
-  position: relative;
-  font-size: 32rpx;
+ height: 100rpx;
+ line-height: 100rpx;
+ background: #fff;
+ border-bottom: 4rpx solid #F7F7F7;
+ padding:0 40rpx;
+ position: relative;
+ font-size: 32rpx;
 }
 
-.red{
-  color: #E10101
-}
 .input{
   height: 100rpx;
   line-height: 100rpx;
   padding: 0;
   text-align: right;
+}
+
+
+.red{
+  color: #E10101
 }
 
 .upload-box{
@@ -73,6 +76,7 @@
   background:rgba(194,167,83,1);
   border-radius:16rpx;
   text-align: center;
+  padding: 0;
   font-size:32rpx;
   font-family:PingFangSC-Regular,PingFang SC;
   font-weight:400;
@@ -106,6 +110,14 @@
   height: 200rpx;
   background:rgba(255,255,255,1);
   border:2rpx solid rgba(219,219,219,1);
+  position: relative;
+}
+.upload-bj image{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 .add{
   width: 100%;
