--- a/pages/single/index.wxml
+++ b/pages/single/index.wxml
@@ -12,7 +12,7 @@
   </swiper>
 </view>
 <view class="single-list">
-  <view class="list">
+  <view class="list" wx:for="{{list}}" wx:key="{{index}}">
     <view class="fl user_icon">
       <image></image>
     </view>
@@ -47,7 +47,7 @@
       </view>
     </view>
   </view>
-  <view class="list">
+  <!-- <view class="list">
     <view class="fl user_icon">
       <image></image>
     </view>
@@ -81,7 +81,7 @@
         <view class="comment_more">查看所有评论</view>
       </view>
     </view>
-  </view>
+  </view> -->
 </view>
 
 <navigator class="add-single" url="/pages/single/release/release">
