--- a/pages/myself/introduction/introduction.wxss
+++ b/pages/myself/introduction/introduction.wxss
@@ -186,3 +186,59 @@ page{
   background: #fff;
 }
 
+
+
+.maskCode{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toast_centerCode{
+  position: relative;
+  width: 686rpx;
+  height: 678rpx;
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:60rpx 40rpx 40rpx 40rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.toat_mainCode{
+    width: 100%;
+  height: 400rpx;
+  display: flex;
+  font-size:28rpx;
+  color: RGBA(153, 153, 153, 1);
+}
+.toat_main{
+  width: 100%;
+  height: 220rpx;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  font-size:32rpx;
+  color: RGBA(0, 0, 0, 1);
+}
+.toat_yes{
+  width: 100%;
+  height:88rpx;
+  font-size: 32rpx;
+  color: RGBA(255, 255, 255, 1);
+  display: flex;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5rpx;
+  background-color: RGBA(174, 156, 128, 1);
+}
+.toat_no{
+  color: RGBA(174, 156, 128, 1);
+  background: RGBA(255, 255, 255, 1);
+}
