--- a/pages/myself/introduction/introduction.wxss
+++ b/pages/myself/introduction/introduction.wxss
@@ -149,7 +149,11 @@ page{
   height: 160rpx;
   position: relative;
   display: inline-block;
-  background: #000;
+}
+.upload-list image{
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 .upload-list:nth-child(4n){
   margin-right: 0;
@@ -158,6 +162,7 @@ page{
 
 .upload-list-m-b{
   margin-bottom: 20rpx;
+  vertical-align: top;
 }
 
 .add{
